--- a/front-end/views/home/style.css
+++ b/front-end/views/home/style.css
@@ -13,6 +13,7 @@
     color: black;
 }
 
-.container-fluid{
-    background: url(assets/1.jpg);
+body{
+    background-attachment: fixed;
+    background: url(assets/1.jpg) no-repeat;
 }
